@@ -2500,11 +2500,9 @@ inode           : IF INODE operator NUMBER rate1 THEN action1 recovery {
                 ;
 
 space           : IF SPACE operator value unit rate1 THEN action1 recovery {
-                        if (! filesystem_usage(current))
-                                yyerror2("Cannot read usage of filesystem %s", current->path);
                         filesystemset.resource = Resource_Space;
                         filesystemset.operator = $<number>3;
-                        filesystemset.limit_absolute = (long long)((double)$<real>4 / (double)current->inf.filesystem->f_bsize * (double)$<number>5);
+                        filesystemset.limit_absolute = $<real>4 * $<number>5;
                         addeventaction(&(filesystemset).action, $<number>8, $<number>9);
                         addfilesystem(&filesystemset);
                   }
@@ -2516,11 +2514,9 @@ space           : IF SPACE operator value unit rate1 THEN action1 recovery {
                         addfilesystem(&filesystemset);
                   }
                 | IF SPACE TFREE operator value unit rate1 THEN action1 recovery {
-                        if (! filesystem_usage(current))
-                                yyerror2("Cannot read usage of filesystem %s", current->path);
                         filesystemset.resource = Resource_SpaceFree;
                         filesystemset.operator = $<number>4;
-                        filesystemset.limit_absolute = (long long)((double)$<real>5 / (double)current->inf.filesystem->f_bsize * (double)$<number>6);
+                        filesystemset.limit_absolute = $<real>5 * $<number>6;
                         addeventaction(&(filesystemset).action, $<number>9, $<number>10);
                         addfilesystem(&filesystemset);
                   }
